--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "chart.js": "^4.4.2",
     "classnames": "^2.5.1",
     "ml5": "^0.12.2",
