--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^1.7.4",
+    "@tensorflow/tfjs-node": "^4.21.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.2",
     "classnames": "^2.5.1",
