--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "react-fontawesome": "^1.7.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
@@ -32,6 +33,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.2.0"
+    "vite": "^5.4.11"
   }
 }
