--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.3.0",
+    "react-p5": "^1.4.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
